# ral

./: .gitignore  CMakeLists.txt  README.md  pyproject.toml
.github/workflows/: build-docs.yaml  check-format.yaml  run-tests.yaml
analyzers/: CMakeLists.txt
analyzers/src/: ReconstructedParticle.cc
cmake/: RALConfig.cmake.in  RALCreateConfig.cmake  RALFunctions.cmake
doc/: Doxyfile.in  DoxygenLayout.xml
docs/: CalorimeterHit_8cc.html  CalorimeterHit_8cc__incl.dot  CalorimeterHit_8h.html  CalorimeterHit_8h__dep__incl.dot  CalorimeterHit_8h__incl.dot  CalorimeterHit_8h_source.html  Cluster_8cc.html  Cluster_8cc__incl.dot  Cluster_8h.html  Cluster_8h__dep__incl.dot  Cluster_8h__incl.dot  Cluster_8h_source.html  LinkDef_8h.html  LinkDef_8h_source.html  Loader_8cc.html  Loader_8cc__incl.dot  Loader_8h.html  Loader_8h__dep__incl.dot  Loader_8h_source.html  LogicalOperators_8cc.html  LogicalOperators_8cc__incl.dot  LogicalOperators_8h.html  LogicalOperators_8h__dep__incl.dot  LogicalOperators_8h__incl.dot  LogicalOperators_8h_source.html  MCParticle_8cc.html  MCParticle_8cc__incl.dot  MCParticle_8h.html  MCParticle_8h__dep__incl.dot  MCParticle_8h__incl.dot  MCParticle_8h_source.html  ParticleID_8cc.html  ParticleID_8cc__incl.dot  ParticleID_8h.html  ParticleID_8h__dep__incl.dot  ParticleID_8h__incl.dot  ParticleID_8h_source.html  ReconstructedParticle_8cc.html  ReconstructedParticle_8cc__incl.dot  ReconstructedParticle_8h.html  (+80 more)
docs/search/: all_0.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_c.js  classes_0.js  defines_0.js  enums_0.js  enumvalues_0.js  enumvalues_1.js  enumvalues_2.js  files_0.js  files_1.js  files_2.js  files_4.js  functions_1.js  functions_2.js  functions_3.js  functions_5.js  functions_6.js  searchdata.js  variables_0.js
include/ral/: CalorimeterHit.h  Cluster.h  LinkDef.h  Loader.h  LogicalOperators.h  MCParticle.h  ParticleID.h  ReconstructedParticle.h  Track.h  TrackerHit3D.h  Vertex.h
metaprograming/: CalorimeterHit.py  Cluster.py  CodeSnipets.py  FunctionCollectionRequest.py  FunctionGetter.py  FunctionMask.py  FunctionParameter.py  FunctionPrinter.py  FunctionSelector.py  FunctionSignature.py  FunctionSorter.py  MCParticle.py  RalEnums.py  RalWriter.py  ReconstructedParticle.py  Track.py  TrackerHit3D.py  Vertex.py  __main__.py  write.py
scripts/: example.py
src/: CalorimeterHit.cc  Cluster.cc  Loader.cc  LogicalOperators.cc  MCParticle.cc  ParticleID.cc  ReconstructedParticle.cc  Track.cc  TrackerHit3D.cc  Vertex.cc
test/: CMakeLists.txt
test/integration/: CMakeLists.txt  ReconstructedParticle.py  ReconstructedParticleSource.py  example.py
test/unittest/: CMakeLists.txt  ReconstructedParticle.cpp
tests/: CMakeLists.txt
tests/unittest/: ReconstructedParticle.cpp
